<resources>
    <string name="app_name">Matgar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="backdrop_title">Alatheer matgar center</string>
    <string name="backdrop_subtitle">All you want is one button </string>
    <string name="internet">Check your Internet connection</string>
    <string name="register">register</string>
    <string name="detail">details</string>


    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="face">Log in whit Facebook</string>
    <string name="gmail">Log in whit Gmail</string>

    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="or">OR</string>

    <string name="men_fashion">MEN FASHION</string>
    <string name="men_clothing">Men Clothing</string>
    <string name="men_Shoes">Men Shoes</string>
    <string name="men_accessories">Men Accessories</string>

    <string name="women_fashion">Women FASHION</string>
    <string name="women_clothing">Women Clothing</string>
    <string name="women_Shoes">Women Shoes</string>
    <string name="women_accessories">Women Accessories</string>

    <string name="mobile_tablets">MOBILES &amp; TABLETS</string>
    <string name="mobiles">Mobiles</string>
    <string name="tablets_ipads">Tablets &amp; Ipads</string>
    <string name="accessories">Accessories</string>

    <string name="home_living">HOME &amp; LIVING</string>
    <string name="home">Home</string>
    <string name="appliances">Appliances</string>

    <string name="laptop_accessories">LAPTOP &amp; ACCESSORIES</string>
    <string name="laptops">Laptops</string>
    <string name="networking_products">Networking Products</string>
    <string name="power">Power</string>

    <string name="accessories_peripherals">Accessories &amp; Peripherals</string>
    <string name="hard_drives">Appliances</string>
    <string name="printers">Printers &amp; Scanners</string>
    <string name="spare_partes">Appliances</string>
    <string name="my_orders">My Orders</string>
    <string name="sign_in">Sign In</string>
    <string name="Recent">Recent Searches</string>
    <string name="Recently">Recently Viewed</string>
    <string name="addphoto">Add Photo</string>
    <string name="whatAd">ما الذي تود الاعلان عنه</string>
    <string name="title">عنوان الاعلان</string>
    <string name="phone">رقم الموبيل</string>
    <string name="detailad">نص العنوان ( اضف تفاصيل اكثر )</string>
    <string name="save">حفظ ونشر الاعلان</string>
    <string name="call">Call Us</string>
    <string name="addADs">Add ADs</string>


    <string-array name="all_arrays">
        <item>men</item>
        <item>Women</item>
    </string-array>

    <string name="facebook_app_id">470404933331382</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="action_logout">Logout</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="action_settingss">LogOut</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">4tN0JifZwPGkz39tOopCMtlA4</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	6VXhvxch3dBkYB0eDaab4IGLsOvkoDStJv05Bvux35Uxr133AW</string>


</resources>
