<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.elashry.matgar.Activities.AddAda">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">



            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="right"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/addphoto"
                android:textColor="@color/white"
                android:drawableTop="@mipmap/cam"
                android:textSize="20dp"
                android:background="@color/colorPrimary"
                android:textStyle="bold" />


    <!--<ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ListView
                    android:id="@+id/list"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </ListView>

            </LinearLayout>
        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/Card"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#efefef"
                cardview:cardCornerRadius="2dp"
                cardview:cardElevation="3dp"
                cardview:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:background="@color/colorPrimary"
                    >


                    <Button
                        android:id="@+id/cname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:drawableLeft="@mipmap/etgah"
                        android:text="@string/whatAd"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/cphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:paddingBottom="5dp"
                        android:inputType="phone"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:hint="@string/title"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/cmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:hint="@string/phone"
                        android:textColorHint="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/cmassege"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:minLines="3"
                        android:textAlignment="gravity"
                        android:gravity="top"
                        android:hint="@string/detailad"
                        android:textColorHint="@color/colorPrimary"
                        android:background="@drawable/text"/>



                    <Button
                        android:id="@+id/btnWithText"
                        android:layout_width="150dp"
                        android:onClick="registerOrder"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/amber_400"
                        android:textSize="18sp"
                        android:text="@string/save"
                        android:layout_gravity="center"

                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </ScrollView>





    </LinearLayout>

</RelativeLayout>

